# tw-stock-analyst

./: .gitignore  CRONJOB_SETUP.md  LICENSE  QUICKSTART.md  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
qdrant_storage/: raft_state.json
src/tw_stock_analyst/: __init__.py  cli.py  config.py  data_loader.py  data_sync.py  sync.py
src/tw_stock_analyst/data/: __init__.py  fundamentals.py  indicators.py  stock_collector.py
src/tw_stock_analyst/rag/: __init__.py  generator.py  retriever.py
src/tw_stock_analyst/vectordb/: __init__.py  embeddings.py  qdrant_client.py
