[project]
name = "tw-stock-analyst"
version = "0.1.0"
description = "Taiwan Stock Market RAG System with Vector Database for Local LLM (Deepseek)"
readme = "README.md"
authors = [
    { name = "Ken Tseng" }
]
requires-python = ">=3.12"

dependencies = [
    # Vector Database
    "qdrant-client>=1.7.0",

    # Embeddings
    "sentence-transformers>=2.2.0",

    # Taiwan Stock Data
    "FinMind>=1.3.0",
    "twstock>=1.3.1",
    "lxml>=4.9.0",  # Required by twstock

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.11.0",  # Technical Analysis library

    # LLM Integration
    "ollama>=0.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",  # CLI formatting
]

[project.scripts]
stock-qa = "tw_stock_analyst.cli:main"
stock-sync = "tw_stock_analyst.data_sync:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
